--- a/src/components/cards/content/skills/progress_bar/ProgressBar.css
+++ b/src/components/cards/content/skills/progress_bar/ProgressBar.css
@@ -5,7 +5,7 @@
 
 .progress-header {
    color: var(--GREY);
-   float: left;
+   text-align: left;
 }
 
 .percentage {
